[package]
name = "fwConfd"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
zbus = { version = "3", default-features = false, features = ["tokio"] }
daemonize = "0.5.0"
